# api-livros

./: Dockerfile  celery_app.py  deployment.yaml  docker-compose.yml  kafka_producer.py  livros.db  livrosapi.py  pyproject.toml  readme.md  service.yaml  tasks.py
.github/workflows/: python-app.yml
tests/: test_auth.py  test_tasks.py
